added references for c#

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -43,6 +43,53 @@ doi = {10.1145/3354584}
     urldate = {2020-10-28},
 }
 
+@online{csharp:getType,
+    title = "GetType method",
+    url = "https://docs.microsoft.com/en-us/dotnet/api/system.object.gettype?view=net-5.0#System_Object_GetType",
+    urldate = {2021-11-17}
+}
+
+@online{csharp:assemblies,
+    title = "Assemblies in .Net",
+    url = "https://docs.microsoft.com/en-us/dotnet/standard/assembly/",
+    urldate = {2021-11-17}
+}
+
+@online{csharp:source_generators,
+    title = "Source Generators",
+    url = "https://docs.microsoft.com/en-us/dotnet/csharp/roslyn-sdk/source-generators-overview",
+    urldate = {2021-11-17}
+}
+
+@online{csharp:attributes,
+    title = "Attributes",
+    url = "https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/concepts/attributes/",
+    urldate = {2021-11-17}
+}
+
+@mastersthesis{csharp:reflection_cost,
+  author  = {Darovich, Andrew},
+  school  = {Cleveland State University },
+  title   = {Productivity at the Cost of Efficiency: An Analysis of Advanced C\# Programming},
+  year    = {2009}
+}
+
+@inproceedings{cpp:reflection:high_performance,
+author = {Devadithya, Tharaka and Chiu, Kenneth and Lu, Wei},
+title = {C++ Reflection for High Performance Problem Solving Environments},
+year = {2007},
+isbn = {1565553136},
+publisher = {Society for Computer Simulation International},
+address = {San Diego, CA, USA},
+abstract = {Problem Solving Environments (PSE) in scientific computing domains require the ability to couple High Performance Computing (HPC) components. A PSE facilitates coupling of tasks or computations in order to aid a scientist in finding a solution to a problem or at least getting closer to a solution. Reflection capabilities are required in order to effectively dynamically couple these components. Reflection facilitates adaptive behavior such as rebinding calls to different functions at run-time, or integrating flexible interpreted languages with compiled languages such as C++ or Fortran. Currently, however, reflection is not available in languages commonly used in high performance computing. While there have been several attempts to incorporate reflection into C++, all of them are either intrusive or are not fully compliant with the C++ standard. In this paper, we present a number of use cases for reflective programming, and show how it can be efficiently and robustly implemented in languages such as C++. Our implementation uses code generation to add metadata, and is fully compliant with the standard C++ specification. We compare the overhead of reflection with languages such as Java, and show that our overhead is acceptable for many scenarios. Our reflection library is open-source, and is available at http://www.extreme.indiana.edu/reflcpp.},
+booktitle = {Proceedings of the 2007 Spring Simulation Multiconference - Volume 2},
+pages = {435–440},
+numpages = {6},
+keywords = {problem solving environments, generic programming, scientific computing, high performance computing, C++ reflection},
+location = {Norfolk, Virginia},
+series = {SpringSim '07}
+}
+
 @online{cpp:core_guidelines,
     title="C++ Core Guidelines",
     author = "ISOCPP",
