--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -39,12 +39,13 @@ Atrybuty, pod względem
 \subsection{Mechanizm atrybutów}
 \label{Attributes_mechanism_cm1}
 \subsection{Reprezentacja pośrednia}\label{reprezentacja_posrednia}
-Programista C-=-1 ma możliwość analizować oraz modyfikować reprezentację pośrednią swojego programu w czasie kompilacji. C-=-1 Intermidiate Representation, w skrócie CIR jest nieznacznie uproszczoną wersją języka, reprezentowaną jako struktura danych.
-Użytkownik wchodzi w interakcje z CIR za pomocą zestawu interfejsów opisanych w załączniku 1. Wszystkie typy instrukcji oraz wyrażeń mają ze sobą powiązany konkretny typ. Wyjątkiem jest ScopeTerminationStatement które nie jest powiązane z żadną instrukcją pisaną przez użytkownika. Instrukcja zakończenia zakresu jest wstawiana przez kompilator na koniec każdej instrukcji złożonej i jest odpowiedzialna za wywołanie finalizatorów zmiennych lokalnych (opisane w rozdziale \ref{klasy}).
+Programista C-=-1 może analizować oraz modyfikować reprezentację pośrednią swojego programu w czasie kompilacji. C-=-1 Intermidiate Representation, w skrócie CIR jest nieznacznie uproszczoną wersją języka, reprezentowaną jako struktura danych.
+Użytkownik wchodzi w interakcje z CIR za pomocą zestawu interfejsów opisanych w załączniku 1. Wszystkie typy instrukcji oraz wyrażeń mają ze sobą powiązany konkretny typ. Wyjątkiem jest \lstinline{ScopeTerminationStatement} który nie jest powiązany z żadną instrukcją pisaną przez użytkownika.
+Instrukcja zakończenia zakresu jest wstawiana przez kompilator na koniec każdej instrukcji złożonej i jest odpowiedzialna za wywołanie destruktorów zmiennych lokalnych (opisane w rozdziale \ref{klasy}).
 \subsection{Zarządzanie pamięcią}
 Zarządzanie pamięcią w C-=-1 jest oparte na C++11. W 2011 do biblioteki standardowej zostały wprowadzone nowe typy 'inteligentnych wskaźników': \lstinline{unique\_ptr}, \lstinline{shared\_ptr} oraz \lstinline{weak\_ptr}\cite{ISO:2012:III}.
 Miały one na celu wprowadzenie do języka mechanizmów umożliwiających tanie i automatyczne zarządzanie pamięcią oraz semantyczne podkreślenie relacji między obiektami.
 Korzystając z doświadczeń C++, gdzie te wskazania stały się zalecanym sposobem zarządzania pamięcią\cite{cpp:core_guidelines}, inteligentne wskazania są integralną częścią C-=-1.
 \subsection{Struktura pakietu}\label{struktura_paczki}
-Projekt w języku C-=-1 jest identyfikowany przez plik manifestu o rozszerzeniu .mn. Pliki źródłowe mają rozszerzenia .cm. W tym samym folderze co manifest znajduje się folder \lstinline{src}. Kompilator zakłada, że wszystkie pliki o rozszerzenia \lstinline{.cm} będące jego potomkami należą do projektu definiowanego przez manifest.
+Projekt w języku C-=-1 jest identyfikowany przez plik manifestu o rozszerzeniu .mn. Pliki źródłowe mają rozszerzenia .cm. W tym samym folderze co manifest znajduje się folder \lstinline{src}. Kompilator zakłada, że wszystkie pliki o rozszerzeniu \lstinline{.cm} będące jego potomkami należą do projektu definiowanego przez manifest.
 W pliku .mn zdefiniowane są metadane na temat pakietu takie jak autor, wersja czy zależności. Ten aspekt języka jest modelowany na bazie Rust i pliku \lstinline{cargo.toml}.
