various fixes in thesis. Started AOP description

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -90,11 +90,50 @@ location = {Norfolk, Virginia},
 series = {SpringSim '07}
 }
 
+@inproceedings{aop:cpp,
+author = {Spinczyk, Olaf and Lohmann, Daniel and Urban, Matthias},
+year = {2005},
+month = {01},
+pages = {33-53},
+title = {Advances in AOP with AspectC++.}
+}
+
+@article{aop,
+author = {Abdul Hameed, Omar and Younus, Ahmed and Hassan Abbas, Rasha},
+year = {2019},
+month = {12},
+pages = {2022-2033},
+title = {Aspect oriented programming: Concepts, characteristics and implementation},
+volume = {7},
+doi = {10.21533/pen.v7i4}
+}
+
+@book{van1995python,
+  title={Python reference manual},
+  author={Van Rossum, Guido and Drake Jr, Fred L},
+  year={1995},
+  publisher={Centrum voor Wiskunde en Informatica Amsterdam}
+}
+
+@online{antlr,
+    title = "Antlr",
+    author = "Parr Terence",
+    url = "https://www.antlr.org/",
+    urldate={2021-11-17}
+}
+
 @online{cpp:core_guidelines,
     title="C++ Core Guidelines",
     author = "ISOCPP",
     url= "isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines",
     urldate = {2020-10-28},
+}
+
+@online{npm,
+    title = "NPM",
+    author = "npm Inc.",
+    url = "https://www.npmjs.com/",
+    urldate = {2020-11-17}
 }
 
 @online{roslyn,
