--- a/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
+++ b/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
@@ -1,6 +1,6 @@
 \section{Implementacja}
 W celu przeprowadzenia prac badawczych na temat konsekwencji zaproponowanych mechanizmów koniecznym było zaimplementowanie podstawowego kompilatora. 
-W tym rozdziale zostanie opisana 
+W tym rozdziale zostanie opisana implementacja kompilatora, która służyła do testów języka, oraz jej nietypowe aspekty, wynikające z projektu C-=-1.
 
 \subsection{Fazy kompilacji}
 \label{Compilation_phases}
@@ -25,7 +25,7 @@ Na koniec back-end optymalizuje kod pod kątem konkretnej architektury procesora
 
 Ze względu na nietypowe wymagania C-=-1, zastosowano nowy podział odpowiedzialności.
 W przeciwieństwie do typowych języków programowania implementowany kompilator nie może wygenerować reprezentacji pośredniej programu w jednym kroku.
-Punkt \ref{compilation_step:attribute_attachment} procesu kompilacji może wpływać na wybór przeciążenia funkcji.
+Etap \ref{compilation_step:attribute_attachment} procesu kompilacji może wpływać na wybór przeciążenia funkcji.
 Ten aspekt został opisany dokładniej w rozdziale \ref{Attributes_mechanism_cm1}
 
 Kompilator C-=-1 dzieli się na następujące części:
@@ -33,26 +33,27 @@ Kompilator C-=-1 dzieli się na następujące części:
     \item Frontend
     \item Interpreter
     \item Optimiser
-    \item Serialisator
+    \item Serializator
     \item Backend Interface
     \item Backend
 \end{enumerate}
 Część z tych komponentów nazywa się tak samo, jak w klasycznej architekturze. Jest to zabieg celowy, ponieważ pełnią one te same funkcje. 
-Dodatkowe komponenty kompilatora, które zostały wydzielone to: Interpreter, Serialisator oraz Back end Interface.
+Dodatkowe komponenty kompilatora, które zostały wydzielone to: Interpreter, Serializator oraz Back end Interface.
 Nazwa Optimiser została wybrana, ponieważ wyrażenie 'middle-end' rzadko występuje w literaturze, a wybrany termin lepiej opisuje ten komponent.
 
-Ponieważ częścią istotnym elementem języka C-=-1 jest możliwość wykonywania kodu w czasie kompilacji, jednym z wydzielonych komponentów jest Interpreter.
+Ponieważ istotnym elementem języka C-=-1 jest możliwość wykonywania kodu w czasie kompilacji, jednym z wydzielonych komponentów jest Interpreter.
 Operuje on na CIR omówionej w rozdziale \ref{reprezentacja_posrednia}. Interpreter stanowi najważniejszy komponent kompilatora, ponieważ większość transformacji odbywa się za jego pomocą. Szczegółowe działanie tego komponentu jest opisane w rozdziale \ref{interpreter}.
 
 \lstinline{Optimiser} został dodany do struktury kompilatora, aby zapewnić możliwość dalszego rozwoju i dla kompletności projektu. Nie został jednak zaimplementowany.
 
 \lstinline{Serializator} jest odpowiedzialny za zapisywanie i odczytywanie struktur danych kompilatora z postaci tekstowej.
-Serializowaną w ten sposób paczkę można dystrybuować za pomocą serwisu takiego jak NPM oraz używać w innych projektach.
+Serializowaną w ten sposób pakiet można dystrybuować za pomocą serwisu takiego jak NPM \cite{npm} oraz używać w innych projektach.
+Większość współczesnych języków programowania ma powiązany ze sobą system do zarządzania zależnościami, przechowujący listę publicznie dostępnych pakietów.
 Ponieważ zawartością takiego modułu jest serializowane, niezależne od platformy CIR, nie istnieje problem binarnej kompatybilności.
-Kompilacja programu używając paczek C-=-1 jest zbliżona do kompilowania programu C++ używając zależności wyłącznie w formie kodu źródłowego.
+Kompilacja programu używając pakietów C-=-1 jest zbliżona do kompilowania programu C++ używając zależności wyłącznie w formie kodu źródłowego.
 Cały program jest kompilowany tym samym narzędziem, na tej samej maszynie i z tymi samymi flagami. Serializator został dokładnie opisany w rozdziale \ref{serializer}.
 
-Kompilator C-=-1 używa LLVM jako back-endu. W związku z tym, koniecznym jest przetłumaczenie CIR na reprezentację pośrednią LLVM (w dalszej części pracy nazywanej LLVMIR). Dlatego do kompilatora dodano element Backend Interface, który dokonuje tej konwersji. Obydwa te komponenty są opisane w rozdziałach \ref{Backend_Interface} oraz \ref{implementation:backend}.
+Kompilator C-=-1 używa LLVM jako back-endu. W związku z tym, koniecznym jest przetłumaczenie CIR na reprezentację pośrednią LLVM (w dalszej części pracy nazywanej LLVMIR). Dlatego do kompilatora dodano element \lstinline{Backend Interface}, który dokonuje tej konwersji. Obydwa te komponenty są opisane w rozdziałach \ref{Backend_Interface} oraz \ref{implementation:backend}.
 
 Diagram \ref{compilation_process_diagram} przedstawia ogólny proces kompilacji.
 Kod użytkownika jest dzielony na dwie części: atrybuty i funkcje oraz typy.
@@ -82,7 +83,7 @@ Przetworzenie typów i funkcji wymaga kompletnego modelu semantycznego atrybutó
 \subsubsection{Parser}
 \label{implementation:parser}
 Do analizy tekstu wejściowego, użyto generatora parserów Rose\cite{grabski2020}.
-Jest to narzędzie bazujące na Antlr, które znacząco ułatwia manipulowanie drzewem składniowym (ang. AST).
+Jest to narzędzie bazujące na Antlr \cite{antlr}, które znacząco ułatwia manipulowanie drzewem składniowym (ang. Abstract Syntax Tree, AST).
 Te dodatkowe możliwości są wykorzystywane przy przetwarzaniu szablonów (rozdział \ref{implementation:generics}).
 Kompilator trzyma w pamięci tylko jedno drzewo rozkładu na raz, co oznacza, że każdy plik jest wczytywany wielokrotnie.
 Ta decyzja ma ograniczyć ilość zużywanej w danym momencie pamięci operacyjnej.
@@ -98,18 +99,18 @@ Faza \lstinline{create} zbiera nazwy bytów wewnątrz kodu aplikacji.
 Tworzy wszystkie przestrzenie nazw, typy, funkcje oraz atrybuty.
 W tym kroku kompilator nie analizuje zawartości tych obiektów.
 Nie bierze pod uwagę pól i metod typów oraz parametrów i typów zwracanych funkcji.
-Jeżeli w kodzie użytkownika istnieje na przykład funkcja mająca 4 przeciążenia, po fazie \lstinline{create} w modelu semantycznym będą istnieć 4 identyczne kopie tej deklaracji.
+Jeżeli w kodzie użytkownika istnieje na przykład funkcja mająca cztery przeciążenia, po fazie \lstinline{create} w modelu semantycznym będą istnieć cztery identyczne kopie tej deklaracji.
 
 W fazie \lstinline{confirm} deklaracje są uzupełniane.
 Do deklaracji funkcji dodawane są parametry i typ zwracany.
 Typy są uzupełniane o pola oraz implementowane interfejsy.
 Ponieważ na tym etapie kompilator zna wszystkie nazwy typów występujących w programie, kolejność deklaracji nie ma znaczenia, a deklaracje zapowiadające nie są konieczne.
 
-Ostatnia faza to \lstinline{finalize}.
-Jedyna operacja wykonywana w jej trakcie to analiza ciał funkcji oraz metod.
+W fazie \lstinline{finalize}
+analizowane są ciała funkcji oraz metod.
 Ten krok wykonywany jest na końcu, aby upewnić się, że kompilator jest w stanie rozwiązać przeciążenia wszystkich funkcji, do których odwołania mogą się pojawić.
 
-Frontend kompilatora C-=-1 działa w trzech trybach, w zależności od fazy kompilacji.
+\lstinline{Frontend} kompilatora C-=-1 działa w trzech trybach, w zależności od fazy kompilacji.
 Na diagramie \ref{compilation_process_diagram} oznaczone zostały jako f1, f2 i f3.
 W każdej z nich frontend zachowuje się inaczej.
 \begin{itemize}
@@ -140,7 +141,7 @@ CIR jest jednak dużo trudniejsza do interpretowania.
 W przeciwieństwie do języków takich jak CIL (Common Intermediate Language) \cite{ecma:cli}, CIR nie operuje abstrakcyjnej maszynie stosownej.
 Szczegółowy opis działania interpretera znajduje się w rozdziale \ref{interpreter}.
 
-Główne różnice w strukturze między C-=-1 a CIR polegają na bardziej dosłownym wyrażeniu programu. W reprezentacji pośredniej wszystkie odniesienia są w pełni kwalifikowane nazwą paczki i przestrzenią nazw. Finalizatory są wywoływane wprost, używając specjalnej instrukcji. Zamiast rozwiązywania przeciążeń funkcji, CIR odnosi się do konkretnego przeciążenia przez unikatowy identyfikator.
+Główne różnice w strukturze między C-=-1 a CIR polegają na bardziej dosłownym wyrażeniu programu. W reprezentacji pośredniej wszystkie odniesienia są w pełni kwalifikowane nazwą pakietu i przestrzenią nazw. Finalizatory są wywoływane wprost, używając specjalnej instrukcji. Zamiast rozwiązywania przeciążeń funkcji, CIR odnosi się do konkretnego przeciążenia przez unikatowy identyfikator.
 
 \subsubsection{Szablony}
 \label{implementation:generics}
@@ -153,8 +154,8 @@ Diagram \ref{compilation_process_diagram} pokazuje, że w procesie kompilacji je
 Jest używany do konstrukcji atrybutów (i1), wykonywania operacji metaprogramistycznych (i2) oraz do generowania pliku wykonywalnego (i3).
 
 Interpreter C-=-1 używa generycznych struktur danych opisanych w rozdziale \ref{implementation:interpreter:object_representation} zarówno jako danych, jak i reprezentacji wykonywanego programu.
-Ta decyzja została podjęta, ponieważ częstym przypadkiem użycia tego komponentu jest modyfikacja programu, który niedługo będzie wykonywany.
-Na przykład, jeśli kompilowana paczka jest częścią większego projektu, kod modyfikowany w kroku i2, może, przy kompilacji następnej paczki, zostać wykonany.
+Taka decyzja została podjęta, ponieważ częstym przypadkiem użycia tego komponentu jest modyfikacja programu, który niedługo będzie wykonywany.
+Na przykład, jeśli kompilowany pakiet jest częścią większego projektu, kod modyfikowany w kroku i2, może, przy kompilacji następnego pakietu, zostać wykonany.
 Wykonywanie kodu przez interpreter zostało dokładnie opisane w rozdziale \ref{implementation:interpreter:code_execution}.
 
 To podejście ma jednak też swoje wady.
@@ -164,7 +165,7 @@ Ponadto, taka implementacja jest mniej efektywna niż użycie dedykowanych typó
 \subsubsection{Reprezentacja obiektów}
 \label{implementation:interpreter:object_representation}
 
-W kontekście działania interpretera C-=-1 przypomina bardziej dynamicznie typowany język skryptowy taki jak Python niż statycznie typowany, kompilowany język jak C\# czy C++.
+W kontekście działania interpretera C-=-1 przypomina bardziej dynamicznie typowany język skryptowy taki jak Python \cite{van1995python} niż statycznie typowany, kompilowany język jak C\# czy C++.
 Interpreter działa na generycznych strukturach danych, typowych dla języka interpretowanego.
 Rysunek \ref{implementation:data_structures:uml_diagram} przedstawia diagram UML klas używanych przez ten moduł.
 
@@ -189,12 +190,12 @@ Rysunek \ref{implementation:data_structures:uml_diagram} przedstawia diagram UML
 
 \subsection{Backend Interface}
 \label{Backend_Interface}
-Odpowiedzialnością interfejsu back-endu jest przetłumaczenie CIR na LLVMIR.
+Rolą interfejsu back-endu jest przetłumaczenie CIR na LLVMIR.
 Na tym etapie kompilacji, cała reprezentacja pośrednia C-=-1 jest przechowywana w ramach struktur danych interpretera.
 Stworzyło to okazję do napisania części kompilatora w języku docelowym.
 To rozwiązanie zapewniło bezpieczeństwo typów w tej części kodu oraz ułatwiło rozwój C-=-1.
 Tworzenie kompilatora w języku docelowym jest typowym w konstrukcji tego typu narzędzi.
-Program tak skonstruowany nazywają się 'Bootstrapping Compiler' \cite{puntambekar:compiler_design}. 
+Programy tak skonstruowane nazywają się 'Bootstrapping Compiler' \cite{puntambekar:compiler_design}. 
 
 Implementacja tej części kompilatora w C-=-1 ułatwiła rozwój tego języka.
 Jedną z głównych zalet narzędzia skonstruowanego w ten sposób jest istnienie dużego projektu w języku docelowym
@@ -203,15 +204,16 @@ Wymusza to szybszy rozwój języka oraz umożliwia znajdowanie błędów w kompi
 \subsubsection{Funkcje eksponowane przez kompilator}
 
 Używając mechanizmów, opisanych w rozdziałach \ref{implementation:interpreter:special_functions} oraz \ref{implementation:interpreter:cpp_object_references}, udostępniono interfejsowi backendu narzędzie do budowy LLVMIR zdefiniowane w LLVM.
-W ramach biblioteki backendu istnieje cała gama funkcji oraz typów używanych do emitowania reprezentacji pośredniej.
-Do języka C-=-1 został wystawiony minimalny ich podzbiór, konieczny do implementacji podstawowego kompilatora.
+W ramach biblioteki backendu istnieje cała gama funkcji oraz typów używanych do generowania reprezentacji pośredniej.
+W języku C-=-1 dostępny jest minimalny ich podzbiór, konieczny do implementacji podstawowego kompilatora.
 
 \subsubsection{Implementacja interfejsu backendu}
-Razem z plikiem wykonywalnym kompilatora, dystrybuowany jest kod źródłowy paczki, zawierającej interfejs backendu. 
+
+Razem z plikiem wykonywalnym kompilatora, dystrybuowany jest kod źródłowy pakietu, zawierającej \lstinline{interfejs backendu}. 
 Przed kompilacją kodu użytkownika, kompilator wczytuje ten moduł.
 Zaletą tego rozwiązania jest możliwość wymiany tego komponentu, bez rekompilacji całego narzędzia.
-Po załadowaniu tej paczki kompilator szuka w niej funkcji oznaczonej atrybutem \lstinline{compilerEntryPoint} która służy jako punkt wejścia dla interfejsu. 
-Ma ona za zadanie wygenerowanie LLVMIR dla przekazanej jej listy paczek.
+Po załadowaniu tego pakiet kompilator szuka w niej funkcji oznaczonej atrybutem \lstinline{compilerEntryPoint} która służy jako punkt wejścia dla interfejsu. 
+Ma ona za zadanie wygenerowanie LLVMIR dla przekazanej jej listy pakietów.
 
 \subsection{Backend}
 \label{implementation:backend}
