--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -96,3 +96,5 @@ Oznacza to że programista nie musi być świadomy transformacji które wykonuje
 \label{further:adnotated_type_system}
 
 wychodzi na to że koncepcja adnotacji jest bardzo mocno powiązana z systemem typów. Może trzeba przemyśleć w ogóle system typów języka. Odnośnik do teorii typów/kategorii
+\subsubsection{Równoważność atrybutów przy wybieraniu przeciążenia}
+\label{further:adnotated_type_system:attribute_equivalence}
